# woolycore

./: .gitignore  .gitmodules  API_CHANGES.md  CMakeLists.txt  Changelog.md  README.md  bindings.cpp  bindings.h
tests/: test_chat_formatting.cpp  test_embeddings.cpp  test_prediction_steps.c  test_predictions.c
